scroll height fix on iphone se

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ header ul li a:hover
     padding: 3rem;
     /* padding-bottom: 4em; */
     margin-top: -3rem;
-    margin-bottom: 5rem; 
+    margin-bottom: 4rem; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -308,7 +308,7 @@ header ul li a:hover
         padding: 0.75rem;
     }
     .container{
-        margin-top: 10%;
+        margin-top: 8%;
         max-width: 95vw;
         padding: 1.5rem;
         padding-block: 2rem;
